--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div id="baner">
         <div class="menu">
             <button onclick="window.location.href='https://stainowy.github.io/projects'">Projects</button>
-            <button onclick="window.location.href=''"><b>Home</b></button>
+            <button><b>Home</b></button>
             <button onclick="window.location.href='https://stainowy.github.io/#about'">About Me</button>
         </div>
         <h1><b>Stainowy</b></h1>
