--- a/projects/index.html
+++ b/projects/index.html
@@ -36,7 +36,7 @@
             <img src="../assets/Thallium.png" alt="Thallium Studio">
             <h2>Thallium Studio</h2>
             <p>I am a board member of the Thallium programming studio, which creates and manages many interesting projects.</p>
-            <button onclick="window.location.href='https://github.com/ThalliumStudio'">View Project</button>
+            <button onclick="window.open('https://github.com/ThalliumStudio', '_blank')">View Project</button>
         </div>
 
     </div>
