--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
     <nav class="menu">
         <button onclick="window.location.href='#'"><b>Projects</b></button>
         <button onclick="window.location.href='index.html'">Home</button>
-        <button onclick="window.location.href='index.html/#about'">About Me</button>
+        <button onclick="window.location.href='index.html#about'">About Me</button>
     </nav>
 
     <section class="projects-header">
