--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
             <button><b>Home</b></button>
             <button onclick="window.location.href='#about'">About Me</button>
         </nav>
-        <h1><b>Stainowy</b></h1>
-        <br>
-        <p>Programmer and project coordinator </p>
+        <section id="baner-text">
+            <h1><b>Stainowy</b></h1>
+            <br>
+            <p>Programmer and project coordinator </p>
+        </section>
     </section>
 
     <section id="about">
@@ -46,6 +48,7 @@
             <button onclick="window.open('https://t.me/stainowy', '_blank')" title="Telegram"><i class="fab fa-telegram"></i></button>
             <button onclick="window.open('mailto:stainowy@proton.me', '_blank')" title="Email"><i class="fas fa-envelope"></i></button>
         </div>
+        <br>
         <br>
     </section>
     
