--- a/404.html
+++ b/404.html
@@ -18,6 +18,7 @@
     <meta property="og:image:height" content="400" />
     <meta property="og:url" content="https://stainowy.github.io" />
     <meta property="og:type" content="website" />
+    <meta property="og:color" content="#0b0a0a" />
 </head>
 <body>
     <div id="error-baner">
