--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="icon" href="assets\favicon.ico" type="image/png">
     <meta name="description" content="Hi, I am Stainowy... I am a young programmer and coordinator driven by passion." />
 
+    <meta name="google-site-verification" content="fKesR9WxaQFhLcYGv2-juuLoGLmbLSyFYN13ILtPJT4" />
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap">
     <link rel="stylesheet" href="styles.css">
