--- a/404.html
+++ b/404.html
@@ -1,3 +1,18 @@
+<!--
+  ================================================
+   Made with heart by Stainowy (© 2025)
+   stainowy.vercel.app
+   github.com/stainowy
+
+  You MAY NOT:
+   - Use this code for commercial purposes.
+   - Remove credit or redistribute without license terms.
+
+   Respect the code. Respect the creator.
+  ================================================
+-->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
