--- a/index.html
+++ b/index.html
@@ -1,3 +1,17 @@
+<!--
+  ================================================
+   Made with heart by Stainowy (© 2025)
+   stainowy.vercel.app
+   github.com/stainowy
+
+  You MAY NOT:
+   - Use this code for commercial purposes.
+   - Remove credit or redistribute without license terms.
+
+   Respect the code. Respect the creator.
+  ================================================
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,8 +20,6 @@
     <title>Stainowy | Home</title>
     <link rel="icon" href="assets\favicon.ico" type="image/png">
     <meta name="description" content="Hi, I am Stainowy... I am a young programmer and coordinator driven by passion." />
-
-    <meta name="google-site-verification" content="fKesR9WxaQFhLcYGv2-juuLoGLmbLSyFYN13ILtPJT4" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap">
