--- a/404.html
+++ b/404.html
@@ -42,7 +42,7 @@
             Ooops! <span class="letter">C</span>an't<span class="letter"> r</span>each<span class="letter"> a </span><span class="letter">p</span>age!
         </p>
 
-        <button onclick="window.location.href='https://stainowy.github.io'">Go to Home</button>
+        <button onclick="window.location.href='index.html'">Go to Home</button>
     </div>
 </body>
 </html>
