--- a/projects.html
+++ b/projects.html
@@ -54,10 +54,21 @@
             </div>
 
             <h2>Thallium</h2>
-            <p>I am a board member of the Thallium programming studio...</p>
+            <p>Thallium is a programming studio that allows us to combine other small projects into something big, and I am its founder.</p>
             <button onclick="window.open('https://github.com/ThalliumStudio', '_blank')">View Project</button>
         </div>
 
+        <div class="project-card">
+            <div class="slider">
+                <img src="assets/thallium.png" class="active" alt="Thallium Logo">
+                <span class="arrow left">&#10094;</span>
+                <span class="arrow right">&#10095;</span>
+            </div>
+
+            <h2>Thallium</h2>
+            <p>Thallium is a programming studio that allows us to co.</p>
+            <button onclick="window.open('https://github.com/ThalliumStudio', '_blank')">View Project</button>
+        </div>
 
     </div>
 
