--- a/projects.html
+++ b/projects.html
@@ -48,9 +48,7 @@
     <div class="projects-container">
         <div class="project-card">
             <div class="slider">
-                <img src="assets/Thallium.png" class="active" alt="Thallium Logo">
-                <span class="arrow left">&#10094;</span>
-                <span class="arrow right">&#10095;</span>
+                <img src="assets/Thallium/logo.png" class="active" alt="Thallium Logo">
             </div>
 
             <h2>Thallium</h2>
@@ -58,7 +56,19 @@
             <button onclick="window.open('https://github.com/ThalliumStudio', '_blank')">View Project</button>
         </div>
 
+        <div class="project-card">
+            <div class="slider">
+                <img src="assets/SCheck/logo.png" class="active" alt="SCheck Logo">
+                <img src="assets/SCheck/baner.png" class="active" alt="SCheck Logo">
+            </div>
+
+            <h2>SCheck-Blocklist</h2>
+            <p>SCheck Blocklist is an open-source tool built for developers. We offer verified public blocklists of domains, URLs & phrases.</p>
+            <button onclick="window.open('https://scheck-blocklist.vercel.app', '_blank')">View Project</button>
+        </div>
     </div>
+
+
 
 
 
