--- a/projects.html
+++ b/projects.html
@@ -21,16 +21,20 @@
     <link rel="icon" href="assets\favicon.ico" type="image/png">
     <meta name="description" content="Hi, I am Stainowy... I am a young programmer and coordinator driven by passion." />
 
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Stainowy">
+    <link rel="canonical" href="https://stainowy.vercel.app/">
+
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" >
 
     <meta property="og:title" content="Stainowy" />
     <meta property="og:description" content="Hi, I am Stainowy... On this page you will find my projects!" />
-    <meta property="og:image" content="https://stainowy.github.io/assets/thumbail.png" />
+    <meta property="og:image" content="https://stainowy.vercel.app/assets/thumbail.png" />
     <meta property="og:image:width" content="400" />
     <meta property="og:image:height" content="400" />
-    <meta property="og:url" content="https://stainowy.github.io" />
+    <meta property="og:url" content="https://stainowy.vercel.app" />
     <meta property="og:type" content="website" />
     <meta property="og:color" content="#0b0a0a" />
 </head>
@@ -38,7 +42,7 @@
     <nav class="menu">
         <button onclick="window.location.href='#'"><b>Projects</b></button>
         <button onclick="window.location.href='index.html'">Home</button>
-        <button onclick="window.location.href='index.html#about'">About Me</button>
+            <button onclick="window.location.href='works.html'">Works</button>
     </nav>
 
     <section class="projects-header">
@@ -59,12 +63,11 @@
         <div class="project-card">
             <div class="slider">
                 <img src="assets/SCheck/logo.png" class="active" alt="SCheck Logo">
-                <img src="assets/SCheck/baner.png" class="active" alt="SCheck Logo">
             </div>
 
             <h2>SCheck-Blocklist</h2>
             <p>SCheck Blocklist is an open-source tool built for developers. We offer verified public blocklists of domains, URLs & phrases.</p>
-            <button onclick="window.open('https://scheck-blocklist.vercel.app', '_blank')">View Project</button>
+            <button onclick="window.open('projects/scheck.html', '_self')">View Project</button>
         </div>
     </div>
 
