--- a/works.html
+++ b/works.html
@@ -18,7 +18,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stainowy | Error</title>
+    <title>Stainowy | Works</title>
     <link rel="icon" href="assets\favicon.ico" type="image/png">
     <meta name="description" content="Hi, I am Stainowy... I am a young programmer and coordinator driven by passion." />
 
@@ -32,16 +32,16 @@
 
     <meta property="og:title" content="Stainowy" />
     <meta property="og:description" content="Hi, I am Stainowy... You will find ABSOLUTELY nothing on this page" />
-    <meta property="og:image" content="https://stainowy.vercel.app/assets/thumbail.png" />
+    <meta property="og:image" content="https://stainowy.github.io/assets/thumbail.png" />
     <meta property="og:image:width" content="400" />
     <meta property="og:image:height" content="400" />
-    <meta property="og:url" content="https://stainowy.vercel.app" />
+    <meta property="og:url" content="https://stainowy.github.io" />
     <meta property="og:type" content="website" />
     <meta property="og:color" content="#0b0a0a" />
 </head>
 <body>
     <div id="error-baner">
-        <h1>404</h1>
+        <h1>SOON</h1>
         <p id="easteregg">
             Oooops! We couldn't find this page
         </p>
