--- a/index.html
+++ b/index.html
@@ -21,16 +21,20 @@
     <link rel="icon" href="assets\favicon.ico" type="image/png">
     <meta name="description" content="Hi, I am Stainowy... I am a young programmer and coordinator driven by passion." />
 
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Stainowy">
+    <link rel="canonical" href="https://stainowy.vercel.app/">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap">
     <link rel="stylesheet" href="styles.css">
 
     <meta property="og:title" content="Stainowy" />
     <meta property="og:description" content="Hi, I am Stainowy... I am a young programmer and coordinator driven by passion." />
-    <meta property="og:image" content="https://stainowy.github.io/assets/thumbail.png" />
+    <meta property="og:image" content="https://stainowy.vercel.app/assets/thumbail.png" />
     <meta property="og:image:width" content="400" />
     <meta property="og:image:height" content="400" />
-    <meta property="og:url" content="https://stainowy.github.io" />
+    <meta property="og:url" content="https://stainowy.vercel.app" />
     <meta property="og:type" content="website" />
     <meta property="og:color" content="#0b0a0a" />
 </head>
@@ -39,7 +43,7 @@
         <nav class="menu">
             <button onclick="window.location.href='projects.html'">Projects</button>
             <button><b>Home</b></button>
-            <button onclick="window.location.href='#about'">About Me</button>
+            <button onclick="window.location.href='works.html'">Works</button>
         </nav>
         <section id="baner-text">
             <h1><b>Stainowy</b></h1>
@@ -49,8 +53,6 @@
     </section>
 
     <section id="about">
-        <br>
-        <br>
         <br>
         <p><b>Hi, I am Stainowy...</b></p>
         <p>I am a young programmer driven by passion. I come from Poland (Polska Gurom) I started learning programming in 2023. I've already mastered many skills, including Python and HTML. You can find the full list somewhere lower on this page. :) Thanks to my skills, I've created, and I'm still working on, many interesting projects. I guess you know where you can find them? haha. I'm quite good at coordinating and managing, but that's just by the way. I know Polish and English very well. I am also learning Spanish. Never mind, keep scrolling</p>
@@ -63,7 +65,6 @@
             <button onclick="window.open('https://t.me/stainowy', '_blank')" title="Telegram"><i class="fab fa-telegram"></i></button>
             <button onclick="window.open('mailto:stainowy@proton.me', '_blank')" title="Email"><i class="fas fa-envelope"></i></button>
         </div>
-        <br>
         <br>
     </section>
     
