--- a/projects.html
+++ b/projects.html
@@ -57,7 +57,7 @@
 
             <h2>Thallium</h2>
             <p>Thallium is a programming studio that allows us to combine other small projects into something big, and I am its founder.</p>
-            <button onclick="window.open('https://github.com/ThalliumStudio', '_blank')">View Project</button>
+            <button onclick="window.open('projects/thallium.html', '_self')">View Project</button>
         </div>
 
         <div class="project-card">
