--- a/404.html
+++ b/404.html
@@ -19,20 +19,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stainowy | Error</title>
-    <link rel="icon" href="assets\favicon.ico" type="image/png">
+    <link rel="icon" href="assets/images/favicon.ico" type="image/png">
     <meta name="description" content="Hi, I am Stainowy... I am a young programmer and coordinator driven by passion." />
 
     <meta name="robots" content="index, follow">
     <meta name="author" content="Stainowy">
     <link rel="canonical" href="https://stainowy.vercel.app/">
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/404.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap">
 
     <meta property="og:title" content="Stainowy" />
     <meta property="og:description" content="Hi, I am Stainowy... You will find ABSOLUTELY nothing on this page" />
-    <meta property="og:image" content="https://stainowy.vercel.app/assets/thumbail.png" />
+    <meta property="og:image" content="https://stainowy.vercel.app/assets/images/thumbail.png" />
     <meta property="og:image:width" content="400" />
     <meta property="og:image:height" content="400" />
     <meta property="og:url" content="https://stainowy.vercel.app" />
