--- a/projects.html
+++ b/projects.html
@@ -18,20 +18,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stainowy | Projects</title>
-    <link rel="icon" href="assets\favicon.ico" type="image/png">
+    <link rel="icon" href="assets/images/favicon.ico" type="image/png">
     <meta name="description" content="Hi, I am Stainowy... I am a young programmer and coordinator driven by passion." />
 
     <meta name="robots" content="index, follow">
     <meta name="author" content="Stainowy">
     <link rel="canonical" href="https://stainowy.vercel.app/">
 
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/projects-gallery.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" >
 
     <meta property="og:title" content="Stainowy" />
     <meta property="og:description" content="Hi, I am Stainowy... On this page you will find my projects!" />
-    <meta property="og:image" content="https://stainowy.vercel.app/assets/thumbail.png" />
+    <meta property="og:image" content="https://stainowy.vercel.app/assets/images/thumbail.png" />
     <meta property="og:image:width" content="400" />
     <meta property="og:image:height" content="400" />
     <meta property="og:url" content="https://stainowy.vercel.app" />
@@ -50,37 +50,28 @@
     </section>
     
     <div class="projects-container">
-        <div class="project-card">
+        <a href="projects/thallium.html"><div class="project-card">
             <div class="slider">
-                <img src="assets/Thallium/logo.png" class="active" alt="Thallium Logo">
+                <img src="assets/images/Thallium/logo.png" class="active" alt="Thallium Logo">
             </div>
 
             <h2>Thallium</h2>
             <p>Thallium is a programming studio that allows us to combine other small projects into something big, and I am its founder.</p>
-            <button onclick="window.open('projects/thallium.html', '_self')">View Project</button>
-        </div>
+        </div></a>
 
-        <div class="project-card">
-            <div class="slider">
-                <img src="assets/SCheck/logo.png" class="active" alt="SCheck Logo">
+    <a href="projects/scheck.html"><div class="project-card">
+        <div class="slider">
+                <img src="assets/images/SCheck/logo.png" class="active" alt="SCheck Logo">
             </div>
 
             <h2>SCheck-Blocklist</h2>
             <p>SCheck Blocklist is an open-source tool built for developers. We offer verified public blocklists of domains, URLs & phrases.</p>
-            <button onclick="window.open('projects/scheck.html', '_self')">View Project</button>
-        </div>
+        </div></a>
     </div>
-
-
-
-
 
     <footer>
         <p id="copyright">Stainowy © 2025</p>
     </footer>
-
-    <script src="script.js"></script>
-
 </body>
 
 </html>
