--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stainowy | Projects</title>
-    <link rel="icon" href="assets/images/favicon.ico" type="image/png">
+    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
     <meta name="description" content="Hi, I am Stainowy... I am a young programmer and coordinator driven by passion." />
 
     <meta name="robots" content="index, follow">
