--- a/stains-community.html
+++ b/stains-community.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stain's Community</title>
-    <link rel="icon" href="assets/images/favicon.ico" type="image/png">
+    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
     <meta name="description" content="A corner on discord where everyone can have a good time." />
     <link rel="stylesheet" href="assets/css/community.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
