Hamburger Menu - Mobile Version Bugfixes

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap">
     <link rel="stylesheet" href="assets/css/main.css">
 
+  <script defer src="../assets/js/hamburger.js"></script>
+
     <meta property="og:title" content="Stainowy" />
     <meta property="og:description" content="Hi, I am Stainowy... I am a young programmer and coordinator driven by passion." />
     <meta property="og:image" content="https://stainowy.vercel.app/assets/images/thumbail.png" />
@@ -43,7 +45,19 @@
             <button onclick="window.location.href='projects.html'">Projects</button>
             <button><b>Home</b></button>
             <button onclick="window.location.href='works.html'">Works</button>
-    </nav> 
+    </nav>
+    
+    <div id="hamburger-toggle">
+        <i class="fa-solid fa-bars"></i>
+    </div>
+
+        <nav id="hamburger-menu">
+            <a href="index.html"><b>Home</b></a>
+            <a href="projects.html">Projects</a>
+            <a href="works.html">Works</a>
+            <span id="close-btn"><i class="fa-solid fa-xmark"></i></span>
+        </nav>
+
     <section id="baner">
         <section id="baner-text">
             <h1><b>Stainowy</b></h1>
