--- a/projects/scheck.html
+++ b/projects/scheck.html
@@ -5,14 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Stainowy | SCheck</title>
 
-  <link rel="icon" href="../assets/favicon.ico" type="image/png" />
+  <link rel="icon" href="../assets/favicon.ico" type="image/x-icon" />
   <meta name="description" content="Hi, I am Stainowy... I am a young programmer and coordinator driven by passion." />
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" />
   <link rel="stylesheet" href="../assets/css/project.css" />
-
-  <!-- Twój uniwersalny slider -->
   <script defer src="../assets/js/slider.js"></script>
 
   <meta name="robots" content="index, follow" />
