--- a/works.html
+++ b/works.html
@@ -39,6 +39,7 @@
     <meta property="og:color" content="#0b0a0a" />
 
     <script defer src="../assets/js/slider.js"></script>
+    <script defer src="../assets/js/hamburger.js"></script>
 </head>
 <body>
     <nav class="menu">
@@ -46,6 +47,17 @@
         <button onclick="window.location.href='index.html'">Home</button>
             <button onclick="window.location.href='#'"><b>Works</b></button>
     </nav>
+
+    <div id="hamburger-toggle">
+        <i class="fa-solid fa-bars"></i>
+    </div>
+
+        <nav id="hamburger-menu">
+            <a href="index.html">Home</a>
+            <a href="projects.html">Projects</a>
+            <a href="works.html"><b>Works</b></a>
+            <span id="close-btn"><i class="fa-solid fa-xmark"></i></span>
+        </nav>
 
     <section class="projects-header">
         <h1><b>My Works</b></h1>
