--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <link rel="stylesheet" href="assets/css/main.css">
 
   <script defer src="../assets/js/hamburger.js"></script>
+  <script defer src="../assets/js/community.js"></script>
 
     <meta property="og:title" content="Stainowy" />
     <meta property="og:description" content="Hi, I am Stainowy... I am a young programmer and coordinator driven by passion." />
@@ -128,6 +129,23 @@
             </div>
         </div>
 
+    </section>
+
+    <section id="discord">
+        <div class="discord-banner">
+            <img src="assets/images/community.png" alt="Stain's Community Logo" class="server-logo" />
+            <div class="banner-content">
+            <h3>Stain's Community</h3>
+            <p>A corner on discord where everyone can have a good time. Join our Polish community!</p>
+            <p class="online-count" id="discord-stats">Loading members...</p>
+            <div class="banner-buttons">
+                <a href="https://discord.gg/FpmZxpsjmq" target="_blank">
+                <button class="join-btn">Join Discord</button>
+                </a>
+                <a href="stains-community.html"><span class="read-more-link">Read More</span></a>
+            </div>
+            </div>
+        </div>
     </section>
     
     <footer>
