--- a/404.html
+++ b/404.html
@@ -41,12 +41,13 @@
 </head>
 <body>
     <div id="error-baner">
-        <h1>404</h1>
+        <h1 id="error-header">404</h1>
         <p id="easteregg">
             Oooops! We couldn't find this page
         </p>
 
         <button onclick="window.location.href='index.html'">Go to Home</button>
     </div>
+    <script src="assets/js/404.js"></script>
 </body>
 </html>
