--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap">
     <link rel="stylesheet" href="assets/css/main.css">
 
-  <script defer src="../assets/js/hamburger.js"></script>
-  <script defer src="../assets/js/community.js"></script>
+    <script defer src="../assets/js/hamburger.js"></script>
+    <script defer src="../assets/js/community.js"></script>
 
     <meta property="og:title" content="Stainowy" />
     <meta property="og:description" content="Hi, I am Stainowy... I am a young programmer and coordinator driven by passion." />
@@ -44,8 +44,8 @@
 <body>
     <nav class="menu">
             <button onclick="window.location.href='projects.html'">Projects</button>
-            <button><b>Home</b></button>
-            <button onclick="window.location.href='works.html'">Works</button>
+            <button onclick="window.location.href='index.html'"><b>Home</b></button>
+            <button onclick="window.location.href='works.html'">Portfolio</button>
     </nav>
     
     <div id="hamburger-toggle">
@@ -55,7 +55,7 @@
         <nav id="hamburger-menu">
             <a href="index.html"><b>Home</b></a>
             <a href="projects.html">Projects</a>
-            <a href="works.html">Works</a>
+            <a href="works.html">Portfolio</a>
             <span id="close-btn"><i class="fa-solid fa-xmark"></i></span>
         </nav>
 
@@ -132,6 +132,7 @@
     </section>
 
     <section id="discord">
+        <h2>Join to My Community!</h2>
         <div class="discord-banner">
             <img src="assets/images/community.png" alt="Stain's Community Logo" class="server-logo" />
             <div class="banner-content">
