--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
     <nav class="menu">
         <button onclick="window.location.href='#'"><b>Projects</b></button>
         <button onclick="window.location.href='index.html'">Home</button>
-            <button onclick="window.location.href='works.html'">Works</button>
+            <button onclick="window.location.href='works.html'">Portfolio</button>
     </nav>
 
     <div id="hamburger-toggle">
@@ -54,7 +54,7 @@
         <nav id="hamburger-menu">
             <a href="index.html">Home</a>
             <a href="projects.html"><b>Projects</b></a>
-            <a href="works.html">Works</a>
+            <a href="works.html">Portfolio</a>
             <span id="close-btn"><i class="fa-solid fa-xmark"></i></span>
         </nav>
 
