--- a/projects/scheck.html
+++ b/projects/scheck.html
@@ -75,6 +75,8 @@
       <section class="description">
         <h1>SCheck Blocklist</h1>
         <p>
+        <b>Role: Project Owner, Main Developer</b><br>
+
           SCheck Blocklist is an open source tool created for developers. We
           offer verified public blocklists for domains, URLs and phrases. As
           part of the project we also offer a CLI engine and a python library.
