--- a/projects/thallium.html
+++ b/projects/thallium.html
@@ -60,6 +60,8 @@
       <section class="description">
         <h1>Thallium</h1>
         <p>
+          <b>Role: Owner, Developer</b><br>
+
           Thallium is a programming studio that allows us to combine other small projects into one big one.
           In the studio's projects we use a very large number of different technologies.
           I am a developer and founder of Thallium.
