--- a/works.html
+++ b/works.html
@@ -45,7 +45,7 @@
     <nav class="menu">
         <button onclick="window.location.href='projects.html'">Projects</button>
         <button onclick="window.location.href='index.html'">Home</button>
-            <button onclick="window.location.href='#'"><b>Works</b></button>
+            <button onclick="window.location.href='works.html'"><b>Portfolio</b></button>
     </nav>
 
     <div id="hamburger-toggle">
@@ -55,12 +55,12 @@
         <nav id="hamburger-menu">
             <a href="index.html">Home</a>
             <a href="projects.html">Projects</a>
-            <a href="works.html"><b>Works</b></a>
+            <a href="works.html"><b>Portfolio</b></a>
             <span id="close-btn"><i class="fa-solid fa-xmark"></i></span>
         </nav>
 
     <section class="projects-header">
-        <h1><b>My Works</b></h1>
+        <h1><b>Portfolio</b></h1>
     </section>
     
     <div class="projects-container">
