Add /card and redirects

--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
             <p>I am a young programmer driven by passion. I come from Poland (Polska Gurom) I started learning programming in 2023. I've already mastered many skills, including Python and HTML. You can find the full list somewhere lower on this page. :) Thanks to my skills, I've created, and I'm still working on, many interesting projects. I guess you know where you can find them? haha. I'm quite good at coordinating and managing, but that's just by the way. I know Polish and English very well. I am also learning Spanish. Never mind, keep scrolling</p>
 
             <div class="social">
-                <button onclick="window.open('https://github.com/stainowy', '_blank')" title="GitHub"><i class="fab fa-github"></i></button>
-                <button onclick="window.open('https://discord.com/users/1168212040737890404', '_blank')" title="Discord"><i class="fab fa-discord"></i></button>
-                <button onclick="window.open('https://x.com/Stainowy', '_blank')" title="Twitter"><i class="fab fa-twitter"></i></button>
-                <button onclick="window.open('https://www.instagram.com/stainowy', '_blank')" title="Instagram"><i class="fab fa-instagram"></i></button>
-                <button onclick="window.open('https://t.me/stainowy', '_blank')" title="Telegram"><i class="fab fa-telegram"></i></button>
-                <button onclick="window.open('mailto:stainowy@proton.me', '_blank')" title="Email"><i class="fas fa-envelope"></i></button>
+                <button onclick="window.open('/github', '_blank')" title="GitHub"><i class="fab fa-github"></i></button>
+                <button onclick="window.open('/discord', '_blank')" title="Discord"><i class="fab fa-discord"></i></button>
+                <button onclick="window.open('/x', '_blank')" title="Twitter"><i class="fab fa-twitter"></i></button>
+                <button onclick="window.open('/instagram', '_blank')" title="Instagram"><i class="fab fa-instagram"></i></button>
+                <button onclick="window.open('/telegram', '_blank')" title="Telegram"><i class="fab fa-telegram"></i></button>
+                <button onclick="window.open('/email', '_blank')" title="Email"><i class="fas fa-envelope"></i></button>
             </div>
         </section>
         
