--- a/card.html
+++ b/card.html
@@ -38,7 +38,7 @@
         <button onclick="window.open('/x', '_blank')" title="Twitter"><i class="fab fa-twitter"></i></button>
         <button onclick="window.open('/instagram', '_blank')" title="Instagram"><i class="fab fa-instagram"></i></button>
         <button onclick="window.open('/telegram', '_blank')" title="Telegram"><i class="fab fa-telegram"></i></button>
-        <button onclick="window.open('/email', '_blank')" title="Email"><i class="fas fa-envelope"></i></button>
+        <button onclick="window.open('mailto:stainowy@proton.me', '_blank')" title="Email"><i class="fas fa-envelope"></i></button>
     </div>
   </div>
 </body>
