--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
 </head>
 <body>
     <nav class="menu">
-        <button onclick="window.location.href='#'"><b>Portfolio</b></button>
+        <button onclick="window.location.href='#'"><b>Projects</b></button>
         <button onclick="window.location.href='index.html'">Home</button>
             <button onclick="window.location.href='index.html#about'">About Me</button>
     </nav>
@@ -53,13 +53,13 @@
 
         <nav id="hamburger-menu">
             <a href="index.html">Home</a>
-            <a href="projects.html"><b>Portfolio</b></a>
+            <a href="projects.html"><b>Projects</b></a>
             <a href="index.html#about">About Me</a>
             <span id="close-btn"><i class="fa-solid fa-xmark"></i></span>
         </nav>
 
     <section class="projects-header">
-        <h1><b>Portfolio</b></h1>
+        <h1><b>Projects</b></h1>
     </section>
     
     <div class="projects-container">
