--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <body>
     <main class="screens-wrapper" role="main">
         <nav class="menu">
-                <button onclick="window.location.href='projects.html'">Portfolio</button>
+                <button onclick="window.location.href='projects.html'">Projects</button>
                 <button onclick="window.location.href='index.html'"><b>Home</b></button>
                 <button onclick="window.location.href='#about'">About Me</button>
         </nav>
